After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 656911 - Asserts when you drag the preview out of the window
Asserts when you drag the preview out of the window
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: VoIP
unspecified
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-08-19 13:30 UTC by Jonny Lamb
Modified: 2011-08-30 09:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
CallWindow: don't spit unnecessary criticals (1.03 KB, patch)
2011-08-30 09:41 UTC, Emilio Pozuelo Monfort
committed Details | Review

Description Jonny Lamb 2011-08-19 13:30:31 UTC
I dragged the preview out of the call window and got an assertion. It doesn't always happen but is fairly easy to reproduce.

(empathy-call:20081): empathy-CRITICAL **: empathy_call_window_get_preview_position: assertion `clutter_actor_has_allocation (self->priv->video_box)' failed
Comment 1 Emilio Pozuelo Monfort 2011-08-30 09:41:43 UTC
Created attachment 195170 [details] [review]
CallWindow: don't spit unnecessary criticals

There's no guarantee that an actor has an allocation all the time,
so gracefully handle the case when it doesn't.
Comment 2 Emilio Pozuelo Monfort 2011-08-30 09:49:41 UTC
Attachment 195170 [details] pushed as 5cdfd1e - CallWindow: don't spit unnecessary criticals