CallWindow: don't spit unnecessary criticals

There's no guarantee that an actor has an allocation all the time,
so gracefully handle the case when it doesn't.

https://bugzilla.gnome.org/show_bug.cgi?id=656911